# parallel-disk-usage

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  USAGE.md  benchmark.sh  deny.toml  dylint.toml  es-node.sh  generate-completions.sh  renovate.json  run-on-save  run.sh  test.sh
.devcontainer/: devcontainer.json  install-hyperfine.sh  install-rust-toolchain.sh  post-create.sh
.devcontainer/full/: devcontainer.json  post-create.sh
.devcontainer/rust-only/: devcontainer.json
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/workflows/: benchmark.yaml  cargo-deny.yaml  clippy.yaml  competing-benchmark.yaml  deploy.yaml  dylint.yaml  fmt.yaml  test.yaml
ci/: benchmark-hardlink-dedup.sh  make-tree-with-hardlinks.sh
ci/github-actions/: benchmark.ts  check-for-performance-regressions.ts  competing-benchmark-pdu-dust-dua.ts  competing-benchmark.ts  create-checksums.sh  download-released-binaries.ts  expose-release-artifacts.sh  generate-pkgbuild.py3  gnu-vs-musl-benchmark.ts  illustrate-benchmark-reports.ts  package.json  pnpm-lock.yaml  release-type.py3  report-benchmark-result-pr.ts  tsconfig.json
ci/github-actions/benchmark/: collect-regressions.ts  matrix.ts  pdu-programs.ts  report-files.ts  strict-bash.ts
ci/github-actions/lib/: ajv.ts  env.ts  exec-inline.ts  pick-random.ts
cli/: ai_instructions.rs  completions.rs  main.rs  man_page.rs  usage_md.rs
exports/: completion.bash  completion.elv  completion.fish  completion.ps1  completion.zsh  long.help  pdu.1  pdu.1.man  short.help
src/: ai_instructions.rs  ansi_prefixes.rs  app.rs  args.rs  bytes_display_format.rs  bytes_format.rs  coloring.rs  completions.rs  data_tree.rs  device.rs  device_number.rs  fs_tree_builder.rs  get_size.rs  hardlink.rs  hook.rs  inode.rs  json_data.rs  lib.rs  ls_colors.rs  main.rs  man_page.rs  measurement_system.rs  mount_point.rs  os_string_display.rs  progress_report.rs  reporter.rs  runtime_error.rs  size.rs  size_getters.rs  status_board.rs  tree.rs  tree_builder.rs  usage_md.rs  utils.rs  visualizer.rs
src/app/: deduplicate_arguments.rs  hdd.rs  mount_point.rs  overlapping_arguments.rs  sub.rs
src/app/deduplicate_arguments/: test_deduplicate_arguments.rs  test_remove_items_from_vec_by_indices.rs
src/app/hdd/: test.rs  test_linux.rs  test_linux_smoke.rs
src/app/overlapping_arguments/: test_remove_overlapping_paths.rs
src/app/sub/: hdd.rs  mount_point.rs  unix_ext.rs
src/args/: color.rs  color_option.rs  depth.rs  direction.rs  fraction.rs  quantity.rs  threads.rs
src/bytes_format/: formatter.rs  output.rs  parsed_value.rs
src/data_tree/: constructors.rs  getters.rs  hardlink.rs  partial_reduce.rs  reflection.rs  retain.rs  sort.rs
src/data_tree/partial_reduce/: test.rs
src/data_tree/reflection/: convert.rs  par_methods.rs
src/data_tree/retain/: test.rs
src/error_report/: operation.rs
src/fs_tree_builder/: device_id.rs  error_report.rs  progress.rs
src/fs_tree_builder/error_report/: implementations.rs  operation.rs  text_report.rs
src/hardlink/: aware.rs  deduplicate.rs  hardlink_list.rs  ignorant.rs  link_path_list.rs  record.rs
src/hardlink/hardlink_list/: iter.rs  reflection.rs  summary.rs  test.rs
src/hardlink/link_path_list/: iter.rs  reflection.rs  test.rs
src/hook/: record_hardlink.rs
src/hook/record_hardlink/: storage.rs
src/json_data/: binary_version.rs  schema_version.rs
src/measurement_system/: methods.rs  parsed_value.rs  scale_base.rs  test.rs
src/os_string_display/: test.rs
src/progress_report/: effectual_reporter.rs  event.rs  silenced_reporter.rs
src/reporter/: error_only_reporter.rs  error_report.rs  event.rs  progress.rs  progress_and_error_reporter.rs  progress_report.rs
src/reporter/error_report/: operation.rs  text_report.rs
src/reporter/progress_and_error_reporter/: progress_report_state.rs
src/tree/: iter.rs
src/tree/iter/: iter_depth_index_node.rs  iter_depth_node.rs  iter_node.rs  iter_path.rs  iter_path_node.rs  iter_tree.rs  traverse.rs
src/tree_builder/: info.rs  test.rs
src/utils/: test_path_name.rs
src/visualizer/: bar_alignment.rs  child_position.rs  coloring.rs  column_width_distribution.rs  copy.rs  direction.rs  display.rs  lookup_block.rs  methods.rs  parenthood.rs  proportion_bar.rs  proportion_bar_block.rs  test.rs  tree.rs  tree_skeletal_component.rs
src/visualizer/methods/: bar_table.rs  constants.rs  initial_table.rs  node_info.rs  table.rs  tree_table.rs
template/ai-instructions/: claude.md  shared.md
template/parallel-disk-usage/: PKGBUILD
template/parallel-disk-usage-bin/: PKGBUILD
tests/: _utils.rs  args_fraction.rs  bytes_format.rs  cli_errors.rs  completions.rs  data_tree_reflection.rs  deduplicate_hardlinks.rs  find_mountpoint.rs  flag_combinations.rs  fs_tree_builder.rs  hardlinks_deduplication.rs  hardlinks_deduplication_multi_args.rs  hardlinks_without_deduplication.rs  iter.rs  iter_depth_index_node.rs  iter_path_node.rs  json.rs  measurement_system.rs  one_file_system.rs  os_string_display.rs  sync_ai_instructions.rs  sync_help.rs  sync_man_page.rs  sync_usage_md.rs  tree_builder.rs  usual_cli.rs  visualizer.rs
