[package]
name = "parallel-disk-usage"
description = "Highly parallelized, blazing fast directory tree analyzer"
version = "0.11.0"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
documentation = "https://docs.rs/parallel-disk-usage"
repository = "https://github.com/KSXGitHub/parallel-disk-usage.git"
keywords = [
  "pdu",
  "dust",
  "dutree",
  "size",
  "chart",
]
categories = [
  "command-line-utilities",
  "filesystem",
]
include = [
  "/src",
  "/cli",
  "/tests",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE",
]

[lib]
name = "parallel_disk_usage"
path = "src/lib.rs"

[[bin]]
name = "pdu"
path = "cli/main.rs"
required-features = ["cli"]

[[bin]]
name = "pdu-completions"
path = "cli/completions.rs"
required-features = ["cli-completions"]

[features]
default = ["cli"]
json = ["serde/derive", "serde_json"]
cli = ["clap/derive", "clap_complete", "clap-utilities", "json"]
cli-completions = ["cli"]

[dependencies]
pipe-trait = "^0.4.0"
smart-default = "^0.7.1"
derive_more = { version = "^2.0.1", features = ["full"] }
rayon = "^1.10.0"
text-block-macros = "^0.2.0"
rounded-div = "^0.1.2"
fmt-iter = "^0.2.1"
itertools = "^0.14.0"
assert-cmp = "^0.3.0"
zero-copy-pads = "^0.2.0"
terminal_size = "^0.4.0"
clap = { version = "^4.5.40", optional = true }
clap_complete = { version = "^4.5.54", optional = true }
clap-utilities = { version = "^0.2.0", optional = true }
serde = { version = "^1.0.219", optional = true }
serde_json = { version = "^1.0.140", optional = true }
sysinfo = "^0.35.2"

[dev-dependencies]
build-fs-tree = "^0.7.1"
command-extra = "^1.0.0"
maplit = "^1.0.2"
pretty_assertions = "^1.4.1"
rand = "^0.9.1"
