[package]
name = "parallel-disk-usage"
description = "Highly parallelized, blazing fast directory tree analyzer"
version = "0.21.1"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
documentation = "https://docs.rs/parallel-disk-usage"
repository = "https://github.com/KSXGitHub/parallel-disk-usage.git"
keywords = [
  "pdu",
  "dust",
  "dutree",
  "size",
  "chart",
]
categories = [
  "command-line-utilities",
  "filesystem",
]
include = [
  "/src",
  "/cli",
  "/tests",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE",
]

[lib]
name = "parallel_disk_usage"
path = "src/lib.rs"

[[bin]]
name = "pdu"
path = "cli/main.rs"
required-features = ["cli"]

[[bin]]
name = "pdu-completions"
path = "cli/completions.rs"
required-features = ["cli-completions"]

[[bin]]
name = "pdu-usage-md"
path = "cli/usage_md.rs"
required-features = ["cli"]

[features]
default = ["cli"]
json = ["serde/derive", "serde_json"]
cli = ["clap/derive", "clap_complete", "clap-utilities", "json"]
cli-completions = ["cli"]

[dependencies]
assert-cmp = "0.3.0"
clap = { version = "4.5.46", optional = true }
clap_complete = { version = "4.5.57", optional = true }
clap-utilities = { version = "0.2.0", optional = true }
dashmap = "6.1.0"
derive_more = { version = "2.0.1", features = ["full"] }
derive_setters = "0.1.8"
fmt-iter = "0.2.1"
into-sorted = "0.0.3"
itertools = "0.14.0"
pipe-trait = "0.4.0"
rayon = "1.10.0"
rounded-div = "0.1.2"
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.143", optional = true }
smart-default = "0.7.1"
sysinfo = "0.37.0"
terminal_size = "0.4.3"
text-block-macros = "0.2.0"
zero-copy-pads = "0.2.0"

[dev-dependencies]
build-fs-tree = "0.7.1"
command-extra = "1.0.0"
maplit = "1.0.2"
normalize-path = "0.2.1"
pretty_assertions = "1.4.1"
rand = "0.9.2"
